添加搜索功能，清洗数据库冗余项

--- a/templates/index.html
+++ b/templates/index.html
@@ -87,16 +87,16 @@
 								<a href="/"><i class="glyphicon glyphicon-home" aria-hidden="true"></i><span>主页</span></a>
 							</li>
 							<li>
-								<a href="about.html"><i class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></i><span>关于</span></a>
+								<a href="/search"><i class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></i><span>搜索</span></a>
 							</li>
 							<li>
-								<a href="recommend"><i class="glyphicon glyphicon-text-size" aria-hidden="true"></i><span>每日推荐</span></a>
+								<a href="/recommend"><i class="glyphicon glyphicon-text-size" aria-hidden="true"></i><span>每日推荐</span></a>
 							</li>
 							<li>
 								<a href="classify"><i class="glyphicon glyphicon-picture" aria-hidden="true"></i><span>分类</span></a>
 							</li>
 							<li>
-								<a href="mail.html"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><span>留言</span></a>
+								<a href="/mail"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><span>留言</span></a>
 							</li>
 						  </ul>
 						</nav>
@@ -105,7 +105,7 @@
 					<div class="clearfix"> </div>
 				</div>
 				<div class="logo animated wow bounceInDown" data-wow-duration="1000ms" data-wow-delay="500ms">
-					<h1><a href="index.html"><span>生活需要多一点滋味</span>“每时美味”</a></h1>
+					<h1><a><span>生活需要多一点滋味</span>“每时美味”</a></h1>
 				</div>
 				<div class="social-icons animated wow bounceInDown" data-wow-duration="1000ms" data-wow-delay="800ms">
 				</div>
@@ -214,7 +214,7 @@
 			<h2>美食就在这里<span>不论你来与不来</span></h2>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;美食当前，总有所思，你往往可以找到一份心的平静，在某个角落里慢慢的咀嚼，轻轻的回味，非比寻常的滋味。虽然每个城市有着不同的风景，也许是流水江南，烟笼人家；也许是舞榭亭台,长街曲巷；也许是流光溢彩，店铺林立；但在陌生城市最美好的事情，莫过于餐桌边刚好适合你的一蔬一饭，舌尖上的一饮一啄。</p>
 			<div class="more">
-				<a href="single.html">更多...</a>
+				<a href="recommend">更多...</a>
 			</div>
 		</div>
 	</div>
