--- a/templates/mail.html
+++ b/templates/mail.html
@@ -55,19 +55,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<nav>
 						  <ul>
 							<li>
-								<a href="index.html"><i class="glyphicon glyphicon-home" aria-hidden="true"></i><span>Home</span></a>
+								<a href="/"><i class="glyphicon glyphicon-home" aria-hidden="true"></i><span>主页</span></a>
 							</li>
 							<li>
-								<a href="about.html"><i class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></i><span>About</span></a>
+								<a href="/search"><i class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></i><span>搜索</span></a>
 							</li>
 							<li>
-								<a href="short-codes.html"><i class="glyphicon glyphicon-text-size" aria-hidden="true"></i><span>Short Codes</span></a>
+								<a href="/recommend"><i class="glyphicon glyphicon-text-size" aria-hidden="true"></i><span>每日推荐</span></a>
 							</li>
 							<li>
-								<a href="blog.html"><i class="glyphicon glyphicon-picture" aria-hidden="true"></i><span>Blog</span></a>
+								<a href="classcy"><i class="glyphicon glyphicon-picture" aria-hidden="true"></i><span>分类</span></a>
 							</li>
 							<li class="active">
-								<a href="mail.html"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><span>Mail Us</span></a>
+								<a href="/mail"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><span>留言</span></a>
 							</li>
 						  </ul>
 						</nav>
