--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -56,16 +56,16 @@
 								<a href="/"><i class="glyphicon glyphicon-home" aria-hidden="true"></i><span>主页</span></a>
 							</li>
 							<li>
-								<a href="about.html"><i class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></i><span>关于</span></a>
+								<a href="/search"><i class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></i><span>搜索</span></a>
 							</li>
 							<li class="active">
-								<a href="recommend"><i class="glyphicon glyphicon-text-size" aria-hidden="true"></i><span>每日推荐</span></a>
+								<a href="/recommend"><i class="glyphicon glyphicon-text-size" aria-hidden="true"></i><span>每日推荐</span></a>
 							</li>
 							<li>
 								<a href="classify"><i class="glyphicon glyphicon-picture" aria-hidden="true"></i><span>分类</span></a>
 							</li>
 							<li>
-								<a href="mail.html"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><span>留言</span></a>
+								<a href="/mail"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><span>留言</span></a>
 							</li>
 						  </ul>
 						</nav>
@@ -74,7 +74,7 @@
 					<div class="clearfix"> </div>
 				</div>
 				<div class="logo animated wow bounceInDown" data-wow-duration="1000ms" data-wow-delay="500ms">
-					<h1><a href="index.html"><span>生活需要多一点滋味</span>“每时美味”</a></h1>
+					<h1><a><span>生活需要多一点滋味</span>“每时美味”</a></h1>
 				</div>
 				<div class="social-icons animated wow bounceInDown" data-wow-duration="1000ms" data-wow-delay="800ms">
 				</div>
