分类功能完成，基本可以使用

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -45,7 +45,10 @@
 			<div class="container banner-drop">
 				<div class="header header1">
 					<div class="header-left">
-                        <br><br><br><br>
+                        <ul>
+                            <li class="animated wow fadeInLeftBig" data-wow-duration="1200ms" data-wow-delay="800ms"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> {{ name }} </li>
+                        </ul>
+                        <br><br>
 					</div>
 					<div class="header-right header-right1">
 						<nav>
@@ -60,7 +63,7 @@
 								<a href="/recommend"><i class="glyphicon glyphicon-text-size" aria-hidden="true"></i><span>每日推荐</span></a>
 							</li>
                               <li>
-								<a href="classify"><i class="glyphicon glyphicon-picture" aria-hidden="true"></i><span>分类</span></a>
+								<a href="/classify"><i class="glyphicon glyphicon-picture" aria-hidden="true"></i><span>分类</span></a>
                               </li>
                               <li>
 								<a href="/mail"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><span>留言</span></a>
@@ -74,14 +77,6 @@
 				<div class="logo animated wow bounceInDown" data-wow-duration="1000ms" data-wow-delay="500ms">
                     <h1><a><span>生活需要多一点滋味</span>“每时美味”</a></h1>
 				</div>
-{#				<div class="social-icons animated wow bounceInDown" data-wow-duration="1000ms" data-wow-delay="800ms">#}
-{#					<ul>#}
-{#						<li><a href="#" class="twitter"></a></li>#}
-{#						<li><a href="#" class="facebook"></a></li>#}
-{#						<li><a href="#" class="google"></a></li>#}
-{#						<li><a href="#" class="p"></a></li>#}
-{#					</ul>#}
-{#				</div>#}
 			</div>
 		</div>
 			<script>
@@ -130,6 +125,9 @@
 {#						<a href="single.html">More Info...</a>#}
 {#					</div>#}
 				</div>
+            </div>
+        </div>
+    </div>
 
 <!-- //footer -->
 <!-- here stars scrolling icon -->
