--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
 								<a href="/recommend"><i class="glyphicon glyphicon-text-size" aria-hidden="true"></i><span>每日推荐</span></a>
 							</li>
 							<li>
-								<a href="classify"><i class="glyphicon glyphicon-picture" aria-hidden="true"></i><span>分类</span></a>
+								<a href="/classify"><i class="glyphicon glyphicon-picture" aria-hidden="true"></i><span>分类</span></a>
 							</li>
 							<li>
 								<a href="/mail"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><span>留言</span></a>
