--- a/templates/classify.html
+++ b/templates/classify.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>搜索</title>
+<title>分类</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -79,7 +79,7 @@
 				<div class="header">
 					<div class="header-left">
                         <ul>
-                            <li class="animated wow fadeInLeftBig" data-wow-duration="1200ms" data-wow-delay="800ms"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> 搜索 </li>
+                            <li class="animated wow fadeInLeftBig" data-wow-duration="1200ms" data-wow-delay="800ms"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> 分类 </li>
                         </ul>
                         <br><br>
 					</div>
@@ -89,13 +89,13 @@
 							<li>
 								<a href="/"><i class="glyphicon glyphicon-home" aria-hidden="true"></i><span>主页</span></a>
 							</li>
-							<li class="active">
+							<li>
 								<a href="/search"><i class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></i><span>搜索</span></a>
 							</li>
 							<li>
 								<a href="/recommend"><i class="glyphicon glyphicon-text-size" aria-hidden="true"></i><span>每日推荐</span></a>
 							</li>
-							<li>
+							<li class="active">
 								<a href="/classify"><i class="glyphicon glyphicon-picture" aria-hidden="true"></i><span>分类</span></a>
 							</li>
 							<li>
@@ -125,42 +125,71 @@
 				})(jQuery);
 			</script>
 	</div>
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <div class="input-group col-md-6 col-md-offset-3" style="margin-top:10px">
-        <input type="text" class="form-control" name="name" placeholder={{ holder }} />
-        <span class="input-group-btn">
-            <button class="btn btn-info btn-search">查找</button>
-        </span>
-    </div>
-</form>
 
-<div class="col-md-6 col-md-offset-3">
-    <ul style="padding-left:40px; margin-top:0;margin-bottom:0px">
-    {% for cai in name_list %}
-        <li><a href="/blog/{{ cai.name }}">{{ cai.name }}</a></li>
+<div class="list-group">
+    <a href="#" class="list-group-item active">
+        <h4 class="list-group-item-heading">
+            {{ class1 }}
+        </h4>
+    </a>
+
+    {% for y in sqldata1 %}
+    <a href="/blog/{{ y }}" class="list-group-item">
+        <p class="list-group-item-text">
+            {{ y }}
+        </p>
+    </a>
     {% endfor %}
-    </ul>
 </div>
 
-<div class="col-md-12">
-		<br><br>
-	</div>
-	<script type="text/javascript">
-		$(document).ready(function() {
-			/*
-				var defaults = {
-				containerID: 'toTop', // fading element id
-				containerHoverID: 'toTopHover', // fading element hover id
-				scrollSpeed: 1200,
-				easingType: 'linear'
-				};
-			*/
+<div class="list-group">
+    <a href="#" class="list-group-item active">
+        <h4 class="list-group-item-heading">
+            {{ class2 }}
+        </h4>
+    </a>
 
-			$().UItoTop({ easingType: 'easeOutQuart' });
+    {% for y in sqldata2 %}
+        <a href="/blog/{{ y }}" class="list-group-item">
+            <p class="list-group-item-text">
+                {{ y }}
+            </p>
+        </a>
+    {% endfor %}
+</div>
 
-			});
-	</script>
+<div class="list-group">
+    <a href="#" class="list-group-item active">
+        <h4 class="list-group-item-heading">
+            {{ class3 }}
+        </h4>
+    </a>
+
+    {% for y in sqldata3 %}
+        <a href="/blog/{{ y }}" class="list-group-item">
+            <p class="list-group-item-text">
+                {{ y }}
+            </p>
+        </a>
+    {% endfor %}
+</div>
+
+<div class="list-group">
+    <a href="#" class="list-group-item active">
+        <h4 class="list-group-item-heading">
+            {{ class4 }}
+        </h4>
+    </a>
+
+    {% for y in sqldata4 %}
+        <a href="/blog/{{ y }}" class="list-group-item">
+            <p class="list-group-item-text">
+                {{ y }}
+            </p>
+        </a>
+    {% endfor %}
+</div>
+
 <!-- //here ends scrolling icon -->
 </body>
 </html>
