--- a/templates/mail.html
+++ b/templates/mail.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Mail Us</title>
+<title>留言</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Best Bakery Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+{#<meta name="keywords" content="Best Bakery Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, #}
+{#Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />#}
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- //for-mobile-apps -->
-<link href="../static/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-<link href="../static/css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+<link href="/static/css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!-- js -->
-<script src="../static/js/jquery-1.11.1.min.js"></script>
+<script src="/static/js/jquery-1.11.1.min.js"></script>
 <!-- //js -->
 <!-- animation-effect -->
-<link href="../static/css/animate.min.css" rel="stylesheet">
-<script src="../static/js/wow.min.js"></script>
+<link href="/static/css/animate.min.css" rel="stylesheet">
+<script src="/static/js/wow.min.js"></script>
 <script>
  new WOW().init();
 </script>
@@ -46,10 +46,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="header header1">
 					<div class="header-left">
 						<ul>
-							<li class="animated wow fadeInLeftBig" data-wow-duration="1200ms" data-wow-delay="800ms"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> 987 KVR Street,New York City </li>
-							<li class="animated wow fadeInLeftBig" data-wow-duration="1200ms" data-wow-delay="900ms"><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> +1234 567 890</li>
-							<li class="animated wow fadeInLeftBig" data-wow-duration="1200ms" data-wow-delay="1000ms"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> <a href="mailto:info@example.com">info@example.com</a></li>
-						</ul>
+                            <li class="animated wow fadeInLeftBig" data-wow-duration="1200ms" data-wow-delay="800ms"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> 留言 </li>
+{						</ul>
+                        <br><br>
 					</div>
 					<div class="header-right header-right1">
 						<nav>
@@ -64,7 +63,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<a href="/recommend"><i class="glyphicon glyphicon-text-size" aria-hidden="true"></i><span>每日推荐</span></a>
 							</li>
 							<li>
-								<a href="classcy"><i class="glyphicon glyphicon-picture" aria-hidden="true"></i><span>分类</span></a>
+								<a href="/classify"><i class="glyphicon glyphicon-picture" aria-hidden="true"></i><span>分类</span></a>
 							</li>
 							<li class="active">
 								<a href="/mail"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><span>留言</span></a>
@@ -76,15 +75,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="clearfix"> </div>
 				</div>
 				<div class="logo animated wow bounceInDown" data-wow-duration="1000ms" data-wow-delay="500ms">
-					<h1><a href="index.html"><span>family friendly</span>Best Bakery</a></h1>
+					<h1><a><span>生活需要多一点滋味</span>“每时美味”</a></h1>
 				</div>
 				<div class="social-icons animated wow bounceInDown" data-wow-duration="1000ms" data-wow-delay="800ms">
-					<ul>
-						<li><a href="#" class="twitter"></a></li>
-						<li><a href="#" class="facebook"></a></li>
-						<li><a href="#" class="google"></a></li>
-						<li><a href="#" class="p"></a></li>
-					</ul>
 				</div>
 			</div>
 		</div>
@@ -103,7 +96,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- mail -->
 	<div class="mail">
 		<div class="container">
-		<h2 class="animated wow flipInX" data-wow-duration="1200ms" data-wow-delay="500ms"><span>Get In Touch</span> With US</h2>
+		<h2 class="animated wow flipInX" data-wow-duration="1200ms" data-wow-delay="500ms"><span>联系</span> 我们</h2>
 		<div class="mail-grids">
 			<div class="col-md-4 mail-grid animated wow fadeInLeftBig" data-wow-duration="1200ms" data-wow-delay="800ms">
 				<div class="mail-grid1">
@@ -114,7 +107,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="col-xs-9 mail-grid-right">
 						<div class="mail-grid-right1">
-							<h3>Children's School 23k Avenue <i>USA</i></h3>
+                            <p>地址：</p>
+							<h3>地球村的<i>某个位置</i></h3>
 						</div>
 					</div>
 					<div class="clearfix"> </div>
@@ -129,8 +123,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="col-xs-9 mail-grid-right">
 						<div class="mail-grid-right1">
-							<p><a href="mailto:info@example.com">@example1.com</a>
-								<span><a href="mailto:info@example.com">@example2.com</a></span></p>
+							<p>邮箱：
+                            <span><a href="mailto:237206532@qq.com">237206532@qq.com</a></span></p>
 						</div>
 					</div>
 					<div class="clearfix"> </div>
@@ -145,129 +139,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="col-xs-9 mail-grid-right">
 						<div class="mail-grid-right1">
-							<p>+8 2738 929 929<span>+7 8039 839 028</span></p>
+							<p>电话：<span>1848363884</span></p>
 						</div>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
 			</div>
 			<div class="clearfix"> </div>
-		</div>
-		<div class="map-grids">
-			<div class="col-md-6 map-grid">
-				<h3 class="animated wow flipInX" data-wow-duration="1200ms" data-wow-delay="500ms">Our Location On <span>Map</span></h3>
-				<iframe class="animated wow fadeInLeft" data-wow-duration="1200ms" data-wow-delay="500ms" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2788.493767672681!2d-111.03253628461667!3d45.660987028312086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x534544e474e6bfd9%3A0xe93756749fe17d2e!2sChildrens+School!5e0!3m2!1sen!2sin!4v1454664428808" frameborder="0" style="border:0" allowfullscreen></iframe>
-			</div>
-			<div class="col-md-6 map-grid">
-				<h3 class="animated wow flipInX" data-wow-duration="1200ms" data-wow-delay="500ms">Send <span>Message</span></h3>
-				<form class="animated wow fadeInRight" data-wow-duration="1200ms" data-wow-delay="500ms">
-					<input type="text" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}" required="">
-					<input type="email" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
-					<input type="text" value="Subject" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Subject';}" required="">
-					<textarea type="text"  onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message...';}" required="">Message...</textarea>
-					<input type="submit" value="Submit Now" >
-				</form>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-		</div>
-	</div>
-<!-- //mail -->
-<!-- footer-top -->
-	<div class="footer-top animated wow zoomInDown" data-wow-duration="1000ms" data-wow-delay="800ms">
-		<div class="container">
-			<h3>For Door delivery call- to- us <span>+1234 567 891</span></h3>
-			<p>Request a free estimate from our <span>toll free</span> number</p>
-			<div class="more">
-				<a href="mail.html">Contact Us</a>
-			</div>
-			<div class="footer-top-image">
-				<img src="images/1.png" alt=" " class="img-responsive" />
-			</div>
-		</div>
-	</div>
-<!-- //footer-top -->
-<!-- footer -->
-	<div class="footer-copy animated wow bounceInDown" data-wow-duration="1000ms" data-wow-delay="800ms">
-		<div class="container">
-			<div class="footer-copy-grids">
-				<div class="col-md-3 footer-copy-grid">
-					<h3>About <span>Bakery</span></h3>
-					<img src="images/6.jpg" alt=" " class="img-responsive" />
-					<p>But I must explain to you how all this mistaken idea of denouncing pleasure 
-						and praising pain was born.</p>
-				</div>
-				<div class="col-md-3 footer-copy-grid">
-					<h3>Contact <span>Us</span></h3>
-					<form>
-						<input type="text" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}" required="">
-						<input type="email" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
-						<textarea type="text"  onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message...';}" required="">Message...</textarea>
-						<input type="submit" value="Submit" >
-					</form>
-				</div>
-				<div class="col-md-3 footer-copy-grid">
-					<h3>Popular <span>Items</span></h3>
-					<div class="footer-copy-grids">
-						<div class="col-xs-4 footer-copy-grid1">
-							<a href="single.html"><img src="images/1.jpg" alt=" " class="img-responsive" /></a>
-						</div>
-						<div class="col-xs-4 footer-copy-grid1">
-							<a href="single.html"><img src="images/2.jpg" alt=" " class="img-responsive" /></a>
-						</div>
-						<div class="col-xs-4 footer-copy-grid1">
-							<a href="single.html"><img src="images/3.jpg" alt=" " class="img-responsive" /></a>
-						</div>
-						<div class="clearfix"> </div>
-					</div>
-					<div class="footer-copy-grids">
-						<div class="col-xs-4 footer-copy-grid1">
-							<a href="single.html"><img src="images/4.jpg" alt=" " class="img-responsive" /></a>
-						</div>
-						<div class="col-xs-4 footer-copy-grid1">
-							<a href="single.html"><img src="images/5.jpg" alt=" " class="img-responsive" /></a>
-						</div>
-						<div class="col-xs-4 footer-copy-grid1">
-							<a href="single.html"><img src="images/2.jpg" alt=" " class="img-responsive" /></a>
-						</div>
-						<div class="clearfix"> </div>
-					</div>
-				</div>
-				<div class="col-md-3 footer-copy-grid">
-					<h3>Navigation</h3>
-					<ul>
-						<li><a href="mail.html">Mail Us</a></li>
-						<li><a href="blog.html">Blog</a></li>
-						<li><a href="about.html">About Us</a></li>
-						<li><a href="short-codes.html">Short Codes</a></li>
-					</ul>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-		</div>
-	</div>
-	<div class="footer animated wow bounce" data-wow-duration="1000ms" data-wow-delay="800ms">
-		<div class="container">
-			<p>Copyright &copy; 2016.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
-		</div>
-	</div>
-<!-- //footer -->
-<!-- here stars scrolling icon -->
-	<script type="text/javascript">
-		$(document).ready(function() {
-			/*
-				var defaults = {
-				containerID: 'toTop', // fading element id
-				containerHoverID: 'toTopHover', // fading element hover id
-				scrollSpeed: 1200,
-				easingType: 'linear' 
-				};
-			*/
-								
-			$().UItoTop({ easingType: 'easeOutQuart' });
-								
-			});
-	</script>
+	    </div>
+        </div>
+    </div>
 <!-- //here ends scrolling icon -->
 </body>
 </html>
